Fix padding/spacing

--- a/assets/styles/components/_inset.styl
+++ b/assets/styles/components/_inset.styl
@@ -1,5 +1,5 @@
 .inset
-  padding 35px 20px
+  padding 35px
   box-shadow 0 2px 15px #A5B3AA
   h3
     color text-color
@@ -8,6 +8,10 @@
   li
     color #A5B3AA
     font-size .875em
+    margin-top 1em
+
+    &:first-child
+      margin-top 0
 
     span
       color text-color
